--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Roboto";
   font-weight: normal;
-  src: url(./assets/fonts/Roboto-Regular.ttf);
+  src: url(../fonts/Roboto-Regular.ttf);
 }
 @font-face {
   font-family: "Roboto";
   font-weight: bold;
-  src: url(./assets/fonts/Roboto-Bold.ttf);
+  src: url(../fonts/Roboto-Bold.ttf);
 }
 
 * {
@@ -110,8 +110,7 @@ body {
 
 .updates__item {
   padding-left: calc(21px + 16px);
-  background: url(./assets/images/icon-list.svg) center left / 21px 21px
-    no-repeat;
+  background: url(../images/icon-list.svg) center left / 21px 21px no-repeat;
 }
 
 .updates__item span {
