Removed incorrect paddings on left/right for button styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ body {
   font-weight: bold;
   line-height: 24px;
   text-align: center;
-  padding: 18px 71px 14px 72px;
+  padding: 18px 0 14px 0;
   text-decoration: none;
 }
 
